--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,16 @@
 @import "tailwindcss";
 
+@theme {
+    --color-blue-600: #2954bc;
+}
+
 .hide-scrollbar::-webkit-scrollbar {
     display: none;
 }
 
 .hide-scrollbar {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 }
-
